tests/expects/enum_failure/test_enum_bool_base_type.expect
error: Enum backing type must be an integer type (i8, i16, i32, i64, u8, u16, u32, u64)
  --> enum_failure/test_enum_bool_base_type.truk:1:1
  |
1 | enum BoolEnum : bool {
  | ^
2 |     FALSE = 0,
  |

Compilation failed with 1 error(s)
